fix z-index bug

--- a/roomix-frontend/src/app/pages/landing-page/landing-page.component.scss
+++ b/roomix-frontend/src/app/pages/landing-page/landing-page.component.scss
@@ -48,10 +48,6 @@
   animation-delay: -10s;
 }
 
-.topLayer {
-  z-index: 999;
-}
-
 .bannerOverlay {
   position: relative;
   top: -55vh;
